# RootleLLM

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  corpus.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ingest.yml  qlora.yml  serve.yml  sft.yml  train.yml
configs/: debug.yaml  m5pro.yaml  moe.yaml  rtx5070.yaml  shakespeare.yaml  small.yaml  sources.yaml  tinystories.yaml
docs/: remote-training.md
qlora/: Dockerfile  README.md  finetune.py  requirements.txt  serve.py
scripts/: _bootstrap.py  generate.py  ingest.py  prepare_data.py  query.py  remote_train.sh  serve.py  train.py
sft/: luau.jsonl
src/rootllm/: __init__.py  __main__.py  config.py
src/rootllm/cli/: __init__.py  generate.py  ingest.py  prepare_data.py  query.py  serve.py  train.py
src/rootllm/data/: __init__.py  dataset.py  download.py  ingest.py  luau.py  sft.py  tokenizer.py
src/rootllm/generation/: __init__.py  sampler.py
src/rootllm/model/: __init__.py  attention.py  block.py  feedforward.py  norm.py  rope.py  transformer.py
src/rootllm/serve/: __init__.py  server.py
src/rootllm/training/: __init__.py  checkpoint.py  optim.py  trainer.py
src/rootllm/utils/: seed.py  (+3 more)
tests/: conftest.py  helpers.py  test_checkpointing.py  test_cli.py  test_config.py  test_dataset.py  test_download.py  test_feedforward.py  test_generation.py  test_ingest.py  test_kv_cache.py  test_luau.py  test_memory.py  test_model.py  test_monitoring.py  test_optim.py  test_resume.py  test_rope.py  test_serve.py  test_sft.py  test_tokenizer.py  test_training.py
